fix text align for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -83,10 +83,11 @@ p {
     font-size: 16px;
     font-family:'Montserrat', sans-serif;
     font-weight: 400;
-    line-height: 28px
+    line-height: 28px;
+    opacity: 0.8;
 }
 
-.plight {
+.welcome-text {
     font-size: 16px;
     font-family:'Montserrat', sans-serif;
     font-weight: 400;
@@ -356,10 +357,9 @@ body {
         flex-direction: column;
         justify-content: center;
     }
-    .plight {
-        text-align: justify;
+    .welcome-text {
+        text-align: center;
     }
-
 }
 
 
